--- a/materiais/introducao.Rmd
+++ b/materiais/introducao.Rmd
@@ -9,7 +9,11 @@ fontsize: 11pt
 ---
 -->
 
-# Bem-vindo a Introdução Programação em R com GitHub, ChatGPT e Claude
+\newpage
+
+# Bem-vindo ao curso 
+
+**Introdução Programação em R com GitHub, ChatGPT e Claude**
 
 Este curso foi desenvolvido para quem deseja dar os primeiros passos no mundo da análise de dados usando R, uma das linguagens mais poderosas e populares para ciência de dados. Em 16 horas de conteúdo prático e objetivo, você aprenderá não apenas a programar em R, mas também a integrar ferramentas modernas que potencializam seu aprendizado e produtividade.
 
